@@ -255,8 +255,14 @@ int main(int argc, char* argv[])
 		if (!merklefile.empty())
 		{
 			output = fopen(merklefile.c_str(), "wb+");
+			if (output == NULL)
+			{
+				fprintf(stderr, "failed to open file \"%s\": (%d) %s\n"
+					, merklefile.c_str(), errno, strerror(errno));
+				return 1;
+			}
 			int ret = fwrite(&t.merkle_tree()[0], 20, t.merkle_tree().size(), output);
-			if (ret != t.merkle_tree().size() * 20)
+			if (ret != t.merkle_tree().size())
 			{
 				fprintf(stderr, "failed to write %s: (%d) %s\n"
 					, merklefile.c_str(), errno, strerror(errno));
